# CubeSandbox

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Makefile  README.md  README_zh.md  openapi.yml  package-lock.json
CubeShim/protoc/: Cargo.toml  build.rs
CubeShim/protoc/protos/: agent.proto  oci.proto  types.proto
CubeShim/protoc/src/: agent.rs  agent_ttrpc.rs  csi.rs  empty.rs  health.rs  health_ttrpc.rs  lib.rs  oci.rs  types.rs
CubeShim/shim/: Cargo.toml  build.rs
CubeShim/shim/src/: lib.rs
CubeShim/shim/src/common/: mod.rs  types.rs  utils.rs
CubeShim/shim/src/container/: container_mgr.rs  exec.rs  mod.rs  rootfs.rs
CubeShim/shim/src/cube/: mod.rs
CubeShim/shim/src/hypervisor/: config.rs  mod.rs  snapshot.rs
CubeShim/shim/src/log/: mod.rs  stat_defer.rs
CubeShim/shim/src/sandbox/: config.rs  device.rs  disk.rs  mod.rs  net.rs  pmem.rs  sb.rs
CubeShim/shim/src/service/: mod.rs  srv.rs  task_srv.rs  tools.rs  update_ext.rs
CubeShim/shim/src/snapshot/: cmd.rs  mod.rs
agent/: .gitignore  Cargo.toml  Makefile  README.md  bootstrap.sh  build.sh  rust-toolchain.toml
agent/.cargo/: config.toml
agent/cube/: Cargo.toml
agent/cube/src/: lib.rs  rootfs.rs  utils.rs
agent/libs/logging/src/: lib.rs
agent/libs/oci/: Cargo.toml
agent/libs/protocols/: .gitignore  Cargo.toml  build.rs
agent/libs/protocols/protos/: agent.proto
agent/libs/protocols/src/: lib.rs
agent/rustjail/src/: container.rs  lib.rs  mount.rs  process.rs  seccomp.rs
agent/rustjail/src/cgroups/: mock.rs  notifier.rs
agent/rustjail/src/cgroups/fs/: mod.rs
agent/src/: config.rs  console.rs  device.rs  fixes.rs  linux_abi.rs  mount.rs  netlink.rs  network.rs  rpc.rs  sandbox.rs  signal.rs  time.rs  uevent.rs  watcher.rs
agent/vsock-exporter/: Cargo.toml
cubecow/: Cargo.toml  Makefile  README.md
cubecow/benches/: reflink_ops.rs
cubecow/examples/go-test/: Makefile  go.mod  main.go
cubecow/examples/go-test/cubecow/: cubecow.go  cubecow.h
cubecow/include/: cubecow.h
cubecow/src/: ffi.rs  lib.rs
cubecow/src/config/: mod.rs
cubecow/src/engine/: mod.rs  reflink.rs
cubecow/src/pkg/: mod.rs
cubecow/src/pkg/errors/: mod.rs
cubecow/src/pkg/executor/: mod.rs
cubecow/src/pkg/logger/: mod.rs
cubecow/src/pkg/metrics/: mod.rs
hypervisor/: Cargo.toml  fix_lock.py
hypervisor/acpi_tables/: Cargo.toml
hypervisor/acpi_tables/src/: sdt.rs
hypervisor/arch/: Cargo.toml
hypervisor/arch/src/: lib.rs
hypervisor/arch/src/aarch64/: layout.rs  uefi.rs
hypervisor/arch/src/x86_64/: cpuid_filter.rs  mod.rs  mptable.rs  smbios.rs
hypervisor/block_util/: Cargo.toml
hypervisor/block_util/src/: lib.rs
hypervisor/devices/: Cargo.toml
hypervisor/devices/src/: acpi.rs  ioapic.rs  ivshmem.rs  lib.rs  pvpanic.rs
hypervisor/devices/src/legacy/: cmos.rs  gpio_pl061.rs  i8042.rs  mod.rs  serial.rs  sys_ctrl.rs  uart_pl011.rs
hypervisor/docs/: snapshot_restore.md
hypervisor/event_monitor/: Cargo.toml
hypervisor/event_monitor/src/: lib.rs
hypervisor/event_notifier/: Cargo.toml
hypervisor/event_notifier/src/: lib.rs
hypervisor/fuzz/: Cargo.toml
hypervisor/fuzz/fuzz_targets/: http_api.rs
hypervisor/hypervisor/: Cargo.toml
hypervisor/hypervisor/src/: cpu.rs  lib.rs
hypervisor/hypervisor/src/arch/x86/: mod.rs
hypervisor/hypervisor/src/kvm/: mod.rs
hypervisor/hypervisor/src/kvm/x86_64/: mod.rs
hypervisor/hypervisor/src/mshv/: mod.rs
hypervisor/log_json/: Cargo.toml
hypervisor/log_json/src/: lib.rs
hypervisor/logging/: Cargo.toml
hypervisor/logging/src/: lib.rs
hypervisor/net_util/: Cargo.toml
hypervisor/net_util/src/: lib.rs  open_tap.rs  queue_pair.rs  tap.rs
hypervisor/pci/: Cargo.toml
hypervisor/pci/src/: configuration.rs  msi.rs  msix.rs  vfio.rs
hypervisor/performance-metrics/: Cargo.toml
hypervisor/performance-metrics/src/: performance_tests.rs
hypervisor/qcow/: Cargo.toml
hypervisor/rate_limiter/: Cargo.toml
hypervisor/resources/: Dockerfile
hypervisor/scripts/: dev_cli.sh  run_integration_tests_x86_64.sh  test-util.sh
hypervisor/src/: common.rs  lib.rs  main.rs  vmm_config.rs
hypervisor/test_infra/: Cargo.toml
hypervisor/test_infra/src/: lib.rs
hypervisor/tests/: integration.rs
hypervisor/tpm/: Cargo.toml
hypervisor/tracer/: Cargo.toml
hypervisor/vfio_user/: Cargo.toml
hypervisor/vfio_user/src/: lib.rs
hypervisor/vhdx/src/: vhdx_metadata.rs
hypervisor/vhost_user_block/: Cargo.toml
hypervisor/vhost_user_block/src/: lib.rs
hypervisor/vhost_user_net/: Cargo.toml
hypervisor/vhost_user_net/src/: lib.rs
hypervisor/virtio-devices/: Cargo.toml
hypervisor/virtio-devices/src/: balloon.rs  console.rs  device.rs  fs.rs  iommu.rs  lib.rs  mem.rs  net.rs  rng.rs  seccomp_filters.rs  vdpa.rs  watchdog.rs
hypervisor/virtio-devices/src/transport/: pci_common_config.rs  pci_device.rs
hypervisor/virtio-devices/src/vhost_user/: blk.rs  fs.rs  mod.rs  net.rs  vu_common_ctrl.rs
hypervisor/virtio-devices/src/vsock/: device.rs  mod.rs  packet.rs
hypervisor/virtio-devices/src/vsock/csm/: connection.rs  txbuf.rs
hypervisor/virtio-devices/src/vsock/unix/: mod.rs  muxer.rs
hypervisor/virtiofsd/: 50-virtiofsd.json  Cargo.toml  README.md
hypervisor/virtiofsd/src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  lib.rs  main.rs  oslib.rs  read_dir.rs  server.rs  util.rs
hypervisor/virtiofsd/src/passthrough/: mod.rs  read_only.rs  stat.rs  util.rs
hypervisor/vm-allocator/: Cargo.toml
hypervisor/vm-device/: Cargo.toml
hypervisor/vm-device/src/: bus.rs
hypervisor/vm-migration/: Cargo.toml
hypervisor/vm-migration/src/: lib.rs  protocol.rs
hypervisor/vm-virtio/: Cargo.toml
hypervisor/vmm/: Cargo.toml
hypervisor/vmm/src/: acpi.rs  config.rs  cpu.rs  device_manager.rs  device_tree.rs  gdb.rs  lib.rs  memory_manager.rs  migration.rs  pagemap_anon.rs  seccomp_filters.rs  serial_manager.rs  soft_dirty.rs  vm.rs  vm_config.rs
hypervisor/vmm/src/api/: mod.rs  service.rs
hypervisor/vmm/src/api/http/: http_endpoint.rs  (+1 more)
hypervisor/workflows/: 1check.sh  2upload.sh
(+2024 files in other folders)
