[package]
name = "cube-agent"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2021"

[dependencies]
moniclock = "0.1.0"
oci = { path = "libs/oci" }
rustjail = { path = "rustjail" }
cube = { path = "cube" }
protocols = { path = "libs/protocols" }
lazy_static = "1.3.0"
ttrpc = { version = "0.8.4", features = ["async"], default-features = false }
protobuf = { version = "3.7.2" }
libc = "0.2.160"
nix = "0.23.0"
capctl = "0.2.0"
serde_json = "1.0.39"
scan_fmt = "0.2.3"
scopeguard = "1.0.0"
thiserror = "1.0.26"
regex = "1.5.5"
serial_test = "0.5.1"
sysinfo = "0.23.0"
# Async helpers
async-trait = "0.1.42"
async-recursion = "0.3.2"
futures = "0.3.17"

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
tokio-vsock = "0.5.0"

netlink-sys = { version = "0.7.0", features = ["tokio_socket"] }
rtnetlink = "0.14.0"
netlink-packet-route = "0.19.0"
netlink-packet-core = "0.7.0"
netlink-packet-utils = "0.4.1"
ipnetwork = "0.17.0"

# Note: this crate sets the slog 'max_*' features which allows the log level
# to be modified at runtime.
logging = { path = "libs/logging" }
slog = "2.5.2"
slog-scope = "4.1.2"

# Redirect ttrpc log calls
slog-stdlog = "4.0.0"
log = "0.4.11"

prometheus = { version = "0.14.0", features = ["process"] }
procfs = "0.12.0"
anyhow = "1.0.99"
cgroups = { package = "cgroups-rs", version = "0.3.0" }
time = "0.3.41"

# Tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
tracing-opentelemetry = "0.13.0"
opentelemetry = { version = "0.14.0", features = ["rt-tokio-current-thread"] }
vsock-exporter = { path = "vsock-exporter" }

# Configuration
serde = { version = "1.0.129", features = ["derive"] }
toml = "0.5.8"
clap = { version = "3.0.1", features = ["derive"] }
base64 = "0.22.1"

# The `x86_64` crate provides x86-only intrinsics (CPUID, port I/O, MSRs, ...)
# and only compiles on x86_64. Restrict it to that target so that aarch64
# builds don't pull it into the dependency graph.
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14.2", default-features = false, features = [
    "instructions",
] }

[dev-dependencies]
tempfile = "3.1.0"

[workspace]
members = ["rustjail", "cube"]

[profile.release]
lto = true
codegen-units = 1
# strip = true

[features]
seccomp = ["rustjail/seccomp"]
standard-oci-runtime = ["rustjail/standard-oci-runtime"]

[[bin]]
name = "cube-agent"
path = "src/main.rs"

