[package]
name = "containerd-shim-cube-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "containerd-shim-cube-rs"
path = "src/main.rs"

[features]
default = ["async"]
async =["async-trait","containerd-shim-protos/async", "containerd-shim/async", "futures"]


[dependencies]
containerd-shim = "=0.9.0"
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = ["full"]}
futures = { optional = true, version="=0.3.31"}
containerd-shim-protos = "=0.9.0"
nix = { version = "0.29.0"}
oci-spec = "=0.6.8"
protoc = { path = "../protoc"}
ttrpc = { version = "=0.5.8", features = ["async"]}
serde = { version = "=1.0.209", features = ["rc", "derive"]}
serde_json = "=1.0.128"
time = "=0.3.36"
anyhow = { workspace = true }
async-trait = {optional = true, version="=0.1.88"}
cube-hypervisor = {path = "../../hypervisor", features = ["lib_support"]}
lazy_static = "=1.5.0"
libc = "=0.2.158"
protobuf = "=3.7.2"
chrono = "=0.4.38"
uuid = { version = "1.0", features = ["v4"] }
kvm-bindings = "=0.8.1"
home = { workspace = true }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
