[package]
name = "cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
nix = { version = "0.27.1", features = ["mount"] }
libc = "0.2.160"
