[package]
name = "block_util"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[features]
default = []

[dependencies]
io-uring = "0.5.8"
libc = "0.2.137"
log = "0.4.17"
qcow = { path = "../qcow" }
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0.37"
vhdx = { path = "../vhdx" }
virtio-bindings = { workspace = true, features = ["virtio-v5_0_0"] }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = "0.12.1"

