[package]
name = "pci"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>"]
edition = "2021"

[features]
default = []
kvm = ["vfio-ioctls/kvm"]
mshv = ["vfio-ioctls/mshv"]

[dependencies]
anyhow = "1.0.86"
byteorder = "1.4.3"
hypervisor = { path = "../hypervisor" }
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio", rev = "64171f3", default-features = false }
vfio_user = { path = "../vfio_user" }
vmm-sys-util = "0.12.1"
libc = "0.2.137"
log = "0.4.17"
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0.37"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { workspace = true, features = ["backend-bitmap"] }
vm-migration = { path = "../vm-migration" }

[dependencies.vfio-bindings]
version = "0.3.1"
features = ["fam-wrappers"]
