[package]
name = "protocols"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2021"

[features]
default = []
with-serde = [ "serde", "serde_json" ]

[dependencies]
ttrpc = { version = "0.8.4", features = ["async"]}
async-trait = "0.1.42"
protobuf = { version = "3.7.2" }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }

[build-dependencies]
ttrpc-codegen = "0.6.0"
protobuf = { version = "3.7.2" }
